# psync

./: .dockerignore  .gitignore  Makefile  README.md  config.json  config_single_dir.json  main.py  priv  pyproject.toml  requirements.txt  sshd_config  starter.sh  test.py
docker/: Dockerfile  README.md  public
psync/: __main__.py  commands.py  config_parser.py  conn.py  pipeline.py  scheduler.py
src/psync/: commands.py  config_parser.py  conn.py  pipeline.py  psync.py
tests/: test_psync.py  test_scheduler.py
