[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psync"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
